@@ -1,0 +1,51 @@
+**/TestHDFSCLI.java
+**/TestUrlStreamHandler.java
+**/TestBlockReplacement.java
+**/TestDirectoryScanner.java
+**/TestDiskError.java
+**/TestInterDatanodeProtocol.java
+**/TestSimulatedFSDataset.java
+**/TestBackupNode.java
+**/TestCheckpoint.java
+**/TestComputeInvalidateWork.java
+**/TestDatanodeDescriptor.java
+**/TestEditLog.java
+**/TestFileLimit.java
+**/TestHeartbeatHandling.java
+**/TestHost2NodesMap.java
+**/TestNamenodeCapacityReport.java
+**/TestOverReplicatedBlocks.java
+**/TestPendingReplication.java
+**/TestReplicationPolicy.java
+**/TestStartup.java
+**/TestStorageRestore.java
+**/TestAbandonBlock.java
+**/TestBlocksScheduledCounter.java
+**/TestDatanodeReport.java
+**/TestDataTransferProtocol.java
+**/TestDefaultNameNodePort.java
+**/TestDFSShell.java
+**/TestDFSShellGenericOptions.java
+**/TestDFSUpgradeFromImage.java
+**/TestDistributedFileSystem.java
+**/TestFileAppend.java
+**/TestFileAppend2.java
+**/TestFileAppend3.java
+**/TestFileCorruption.java
+**/TestFileStatus.java
+**/TestFSInputChecker.java
+**/TestFSOutputSummer.java
+**/TestGetBlocks.java
+**/TestHDFSServerPorts.java
+**/TestHDFSTrash.java
+**/TestLease.java
+**/TestLeaseRecovery.java
+**/TestLocalDFS.java
+**/TestMissingBlocksAlert.java
+**/TestPread.java
+**/TestQuota.java
+**/TestRestartDFS.java
+**/TestSafeMode.java
+**/TestNetworkTopology.java
+**/TestPermission.java
+
