@@ -42,6 +42,9 @@ Trunk (unreleased changes)
     HDFS-475. Add new ant targets for fault injection jars and tests.
     (Konstantin Boudnik via szetszwo)
 
+    HDFS-458. Create a new ant target, run-commit-test.  (Jakob Homan
+    via szetszwo)
+
   BUG FIXES
     HDFS-76. Better error message to users when commands fail because of 
     lack of quota. Allow quota to be set even if the limit is lower than
